# snc-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  apps-script.gs  auth.js  netlify.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: protect-env.js
api/: Dockerfile  main.py  notifications.py  requirements.txt
api/templates/: checkin.html
assets/: logo.avif
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/.streamlit/: config.toml
netlify/functions/: submissions.js
public/: checkin.html  index.html
