[project]
name = "snc-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    # Dashboard
    "streamlit==1.45.1",
    "plotly==5.24.1",
    "watchdog==6.0.0",
    # Shared
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "aiosqlite>=0.22.1",
]
